# Inventory-folding

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Inventory-folding/: CMakeLists.txt  README.md  main.cpp
Inventory-folding/data/static/BD/: item.json  levels.json  records.json  tasks.json
Inventory-folding/view/: GameGUI.cpp
data/static/BD/: item.json  levels.json
